Remove unnecessary test config from jaxws-metro-2.2
Tests were moved to other submodules, so the test config is no longer needed in jaxws-metro-2.2